--- a/views/admin/index.hbs
+++ b/views/admin/index.hbs
@@ -11,23 +11,24 @@
     <ul class="cd-tabs-content">
         <li data-content="users" class="selected row">
     <div class="col-xs-12 col-sm-12 col-md-12 col-mlg12 horizontaltab-form well">
-        <form class="form-inline" id="user-form" method="POST" action="">
+        <form class="form-inline" id="user-form" method="POST" action="/create-user">
           <div class="col-xs-12 col-md-6 col-md-6 col-lg-3"> 
             <div class="form-group">
               <label class="sr-only" for="user-name">{{{__ "Name"}}}</label>
-                  <input type="text" class="form-control" id="user-name" name="user-name" placeholder="{{{__ 'Jane Doe'}}}">
+                  <input type="hidden" class="form-control" id="user-id" name="user_id">
+                  <input type="text" class="form-control" id="user-name" name="user_name" placeholder="{{{__ 'Jane Doe'}}}">
             </div>
           </div>
           <div class="col-xs-12 col-md-6 col-md-6 col-lg-3">    
           <div class="form-group">
             <label class="sr-only" for="user-email">{{{__ "Email"}}}</label>
-                <input type="email" class="form-control" id="user-email" name="user-email" placeholder="{{{__ 'jane.doe@example.com'}}}">
+                <input type="email" class="form-control" id="user-email" name="user_email" placeholder="{{{__ 'jane.doe@example.com'}}}">
          </div>
           </div>
           <div class="col-xs-8 col-sm-8 col-md-8 col-lg-2">   
          <div class="form-group">
             <label class="sr-only" for="user-role">{{{__ "Role"}}}</label>
-                <select class="form-control" id="user-role" name="user-role">
+                <select class="form-control" id="user-role" name="user_role">
                    {{#each roles}}
                       <option value="{{this.id}}">{{this.name}}</option>                      
                     {{/each}}
@@ -36,7 +37,7 @@
           </div>
           <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2"> 
          <div class="form-group">
-                <input type="checkbox" data-size="mini" checked class="form-control" data-width="100%" data-height="38px" data-toggle="toggle" data-on="{{{__ 'Accepted'}}}" data-off="{{{__ 'Blocked'}}}" data-offstyle="danger" data-onstyle="success" id="user-accepted" name="user-accepted"/>   
+                <input type="checkbox" data-size="mini" checked class="form-control" data-width="100%" data-height="38px" data-toggle="toggle" data-on="{{{__ 'Accepted'}}}" data-off="{{{__ 'Blocked'}}}" data-offstyle="danger" data-onstyle="success" id="user-accepted" name="user_accepted"/>   
          </div>
           </div>
           <div class="col-xs-4 col-sm-4 col-md-2 col-lg-2">
@@ -115,7 +116,6 @@
             <table width="100%" class="display table" id="roles-management" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>{{{__ "Code"}}}</th>
                         <th>{{{__ "Name"}}}</th>
                         <th>{{{__ "Read"}}}</th>
                         <th>{{{__ "Write"}}}</th>
